[package]
name = "genet-abi"
description = "genet ABI definitions"
license = "MIT"
version = "0.5.0"
authors = ["Ron Hashimoto <mail@h2so5.net>"]
edition = "2018"

[dependencies]
libc = "0.2"
lazy_static = "1"
fnv = "1"
parking_lot = "0.7"
num-bigint = "0.2"
serde = "1"
bincode = "1"
serde_derive = "1"
failure = "0.1"
byteorder = "1"