[package]
name = "genet-abi"
description = "genet ABI definitions"
license = "MIT"
version = "0.5.0"
authors = ["Ron Hashimoto <mail@h2so5.net>"]
edition = "2018"

[dependencies]
bincode = "1"
byteorder = "1"
failure = "0.1"
libc = "0.2"
num-bigint = "0.2"
num-traits = "0.2"
serde = "1"
serde_derive = "1"
url = "1"
