[package]
name = "genet-derive"
description = "genet SDK derives"
license = "MIT"
version = "0.5.0"
authors = ["Ron Hashimoto <mail@h2so5.net>"]
edition = "2018"

[dependencies]
proc-macro2 = "0.4"
quote = "0.6.3"
Inflector = "0.11"
genet-abi = { path = "../genet-abi" }

[dependencies.syn]
version = "0.15"
features = ["extra-traits"]

[lib]
proc-macro = true