[package]
name = "genet-derive"
description = "genet SDK derives"
license = "MIT"
version = "0.5.0"
authors = ["Ron Hashimoto <mail@h2so5.net>"]
edition = "2018"

[dependencies]
Inflector = "0.11"
genet-abi = { path = "../genet-abi" }
proc-macro2 = "0.4"
quote = "0.6.3"

[dependencies.syn]
features = ["extra-traits"]
version = "0.15"

[lib]
proc-macro = true
