[package]
name = "genet-kernel"
version = "0.1.0"
authors = ["Ron Hashimoto <mail@h2so5.net>"]
edition = "2018"
publish = false

[dependencies]
libc = "0.2"
crossbeam-channel = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
libloading = "0.5"
num_cpus = "1"
parking_lot = "0.7"
fnv = "1"
genet-abi = "0.5.0"
genet-sdk = "0.5.0"
genet-filter = { path = "../genet-filter" }
genet-napi = { path = "../genet-napi" }
genet-derive = { path = "../genet-derive" }

[lib]
crate-type = ["staticlib", "rlib"]

[[example]]
name = "eth"
crate-type = ["cdylib"]

[[example]]
name = "reader"
crate-type = ["cdylib"]