[package]
name = "genet-kernel"
version = "0.1.0"
authors = ["Ron Hashimoto <mail@h2so5.net>"]
edition = "2018"
publish = false

[dependencies]
crossbeam-channel = "0.3"
failure = "0.1"
fnv = "1"
genet-abi = "0.5.0"
genet-derive = { path = "../genet-derive" }
genet-filter = { path = "../genet-filter" }
genet-napi = { path = "../genet-napi" }
genet-sdk = "0.5.0"
libc = "0.2"
libloading = "0.5"
num-bigint = "0.2"
num_cpus = "1"
parking_lot = "0.7"
serde = "1"
serde_derive = "1"
serde_json = "1"

[lib]
crate-type = ["staticlib", "rlib"]

[[example]]
crate-type = ["cdylib"]
name = "eth"

[[example]]
crate-type = ["cdylib"]
name = "reader"
