[package]
name = "genet_kernel"
version = "0.1.0"
authors = ["Ron Hashimoto <mail@h2so5.net>"]

[dependencies]
chan = "0.1"
serde = "1"
serde_json = "1"
libloading = "0.5"
genet_ffi = { path = "../genet_ffi" }
genet_sdk = { path = "../genet_sdk" }

[lib]
crate-type = ["staticlib", "rlib"]

[[example]]
name = "eth"
crate-type = ["cdylib"]
