[package]
name = "plugkit"
version = "0.0.8"
authors = ["Ron Hashimoto <mail@h2so5.net>"]
description = "Deplug Package Development Kit"
documentation = "https://deplug.net"
homepage = "https://deplug.net"
repository = "https://github.com/deplug/deplug"
license = "MIT"

[lib]
name = "plugkit"

[dependencies]
libc = "0.2"
byteorder = "1"
