[package]
name = "genet-writer"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1"
genet-derive = { path = "../../../genet-derive" }
genet-format = { path = "../format" }
genet-sdk = "0.5.0"
serde = "1"
serde_derive = "1"
serde_json = "1"

[lib]
crate-type = ["rlib", "cdylib"]
name = "writer"
