[package]
name = "ntp"
version = "0.1.0"
authors = ["Ron Hashimoto <mail@h2so5.net>"]
edition = "2018"

[package.metadata.genet]
maintenance = { status = "..." }

[lib]
crate-type = ["rlib", "cdylib"]
name = "ntp"

[dependencies]
genet-derive = { path = "../../../genet-derive" }
genet-sdk = "0.5.0"
