[package]
name = "http"
version = "0.1.0"
authors = ["Ron Hashimoto <mail@h2so5.net>"]

[lib]
name = "main"
crate-type = ["cdylib"]

[dependencies]
libc = "*"
byteorder = "1"
Inflector = "0.11"
plugkit = { path = "../../../../plugkit/plugkit.rs" }
http-muncher = {git = "https://github.com/deplug/rust-streaming-http-parser"}
