[package]
name = "pcap-reader"
version = "0.1.0"

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
lazy_static = "1"
pcap = { path = "../pcap" }
genet-sdk = "0"

[patch.crates-io]
genet-sdk = { path = "../../../../lib/genet-sdk" }
genet-abi = { path = "../../../../lib/genet-abi" }

[lib]
crate-type = ["cdylib"]