[package]
name = "tcp"
version = "0.1.0"
authors = ["Ron Hashimoto <mail@h2so5.net>"]

[lib]
name = "main"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1"
maplit = "1"
genet-sdk = "0"

[patch.crates-io]
genet-sdk = { path = "../../../../lib/genet-sdk" }
genet-abi = { path = "../../../../lib/genet-abi" }